--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"
-            type="text/javascript"></script>
-    <title>DARTS fromJAXA 2023カレンダー カスタマイズツール</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript"></script>
+    <title>DARTS 2023カレンダー カスタマイズツール</title>
 </head>
 
 <body>
 
 <header>
-    <h1>DARTSカレンダー2023 カスタマイズツール</h1>
+    <p class="title">DARTSカレンダー2023 カスタマイズツール</p>
+    <p class="sub-title">あなたのデスクトップに合わせた壁紙をお作りいただけます</p>
 </header>
 
 <main>
@@ -48,7 +48,7 @@
                     <img src="img/bg/05.png" alt="リュウグウから回収された試料">
                 </label>
 
-                <!--                <input type="radio" name="bg-img" value="06" id="06" --><!---->
+                <!--                <in!---->
                 <!--                <label for="06">-->
                 <!--                    <img src="img/bg/06.png" alt="リュウグウから回収された試料_フラッシュ">-->
                 <!--                </label>-->
@@ -191,14 +191,14 @@
                         <input type="radio" id="0.3" name="大きさ" value="0.3">
                         <label for="0.3">小</label>
 
-                        <input type="radio" id="0.4" name="大きさ" value="0.4">
-                        <label for="0.4">中</label>
+                        <input type="radio" id="0.5" name="大きさ" value="0.5">
+                        <label for="0.5">中</label>
 
-                        <input type="radio" id="0.8" name="大きさ" value="0.8" checked>
+                        <input type="radio" id="0.8" name="大きさ" value="0.8">
                         <label for="0.8">大</label>
 
-                        <input type="radio" id="1" name="大きさ" value="1">
-                        <label for="1">特大</label>
+                        <input type="radio" id="0.9" name="大きさ" value="0.9" checked>
+                        <label for="0.9">特大</label>
                     </div>
 
                     <div class="position">
@@ -274,8 +274,14 @@
         </div>
 
         <!--   プレビューボタン     -->
-        <div class="preview-button">
-            <input type="submit" value="preview" id="preview"><label for="preview">プレビュー</label>
+        <div class="preview-btn">
+            <input type="submit" value="preview" id="preview">
+            <label for="preview">プレビュー</label>
+        </div>
+
+        <!--ダウンロードボタン-->
+        <div class="download-btn">
+            <a type="submit" href="combine.png" download="combine.png" class="download"　id="download">ダウンロード</a>
         </div>
     </form>
 </main>
