--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
 
                 <input type="radio" name="bg-img" value="01" id="01">
                 <label for="01">
-                    <img src="img/bg/01.png" alt="かぐや月面DEMデータを用いて作成した3DCG画像">
+                    <img src="img/bg/for-preview/01.jpg" alt="かぐや月面DEMデータを用いて作成した3DCG画像">
                 </label>
 
                 <input type="radio" name="bg-img" value="02" id="02">
                 <label for="02">
-                    <img src="img/bg/02.png" alt="美星スペースガードセンターで観測されたホームズ彗星">
+                    <img src="img/bg/for-preview/02.jpg" alt="美星スペースガードセンターで観測されたホームズ彗星">
                 </label>
 
                 <input type="radio" name="bg-img" value="03" id="03">
                 <label for="03">
-                    <img src="img/bg/03.png" alt="オーロラ">
+                    <img src="img/bg/for-preview/03.jpg" alt="オーロラ">
                 </label>
 
                 <input type="radio" name="bg-img" value="04" id="04" checked>
                 <label for="04">
-                    <img src="img/bg/04.png" alt="「ひので」のX線望遠鏡で観測した太陽の画像">
+                    <img src="img/bg/for-preview/04.jpg" alt="「ひので」のX線望遠鏡で観測した太陽の画像">
                 </label>
 
                 <input type="radio" name="bg-img" value="05" id="05">
                 <label for="05">
-                    <img src="img/bg/05.png" alt="リュウグウから回収された試料">
+                    <img src="img/bg/for-preview/05.jpg" alt="リュウグウから回収された試料">
                 </label>
 
                 <!--                <in!---->
@@ -55,7 +55,7 @@
 
                 <input type="radio" name="bg-img" value="07" id="07">
                 <label for="07">
-                    <img src="img/bg/07.png" alt="「あけぼの」衛星が紫外線で見たオーロラサブストーム">
+                    <img src="img/bg/for-preview/07.jpg" alt="「あけぼの」衛星が紫外線で見たオーロラサブストーム">
                 </label>
 
                 <!--                <input type="radio" name="bg-img" value="08" id="08" --><!---->
@@ -65,27 +65,27 @@
 
                 <input type="radio" name="bg-img" value="09" id="09">
                 <label for="09">
-                    <img src="img/bg/09.png" alt="衛星てんま">
+                    <img src="img/bg/for-preview/09.jpg" alt="衛星てんま">
                 </label>
 
                 <input type="radio" name="bg-img" value="10" id="10">
                 <label for="10">
-                    <img src="img/bg/10.png" alt="衛星あけぼの">
+                    <img src="img/bg/for-preview/10.jpg" alt="衛星あけぼの">
                 </label>
 
                 <input type="radio" name="bg-img" value="11" id="11">
                 <label for="11">
-                    <img src="img/bg/11.png" alt="">
+                    <img src="img/bg/for-preview/11.jpg" alt="">
                 </label>
 
                 <input type="radio" name="bg-img" value="12" id="12">
                 <label for="12">
-                    <img src="img/bg/12.png" alt="">
+                    <img src="img/bg/for-preview/12.jpg" alt="">
                 </label>
 
                 <input type="radio" name="bg-img" value="13" id="13">
                 <label for="13">
-                    <img src="img/bg/13.png" alt="">
+                    <img src="img/bg/for-preview/13.jpg" alt="">
                 </label>
             </div>
         </section>
