--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         </div>
     </form>
 </main>
-<footer><p>© ️DARTS JAXA</p></footer>
+<footer><p>© ️DARTS JAXA and TANAKA, Nonoka.</p></footer>
 
 </body>
 </html>
