--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 <header>
-    <p class="title">DARTSカレンダー2023 カスタマイズツール</p>
+    <p class="title">カレンダー壁紙作成ツール</p>
     <p class="sub-title">あなたのデスクトップに合わせた壁紙をお作りいただけます</p>
 </header>
 
@@ -303,7 +303,7 @@
         </div>
     </form>
 </main>
-<footer><p>このツールは<a href="https://darts.isas.jaxa.jp/">DARTS</a>にアーカイブされた公開データを使って、<a href="https://www.vivivit.com/tanakanonoka">田中乃々華</a>さん（武蔵野美術大学）とDARTSメンバーが協力のもとに制作・公開しました。ソースコードは<a href="https://github.com/darts-isas/calendargen">こちら</a>から公開されています。画像データの利用は、<a href="https://www.isas.jaxa.jp/researchers/data-policy/">宇宙科学研究所のデータポリシー</a>に従います。</p></footer>
+<footer><p>このツールは<a href="https://darts.isas.jaxa.jp/">DARTS</a>にアーカイブされた公開データを使って、<a href="https://www.vivivit.com/tanakanonoka">田中乃々華</a>さん（武蔵野美術大学）とDARTSメンバーが協力のもとに制作・公開しました。ソースコードは<a href="https://github.com/darts-isas/calendargen">こちら</a>から公開されています。利用は、<a href="https://www.isas.jaxa.jp/researchers/data-policy/">宇宙科学研究所のデータポリシー</a>に従います。<br>問い合わせ先: darts-admin@ML.isas.jaxa.jp</p></footer>
 
 </body>
 </html>
