--- a/index.html
+++ b/index.html
@@ -24,15 +24,29 @@
     <form action="calendar.php" method="post">
         <section class="images-library">
             <div class="container">
-
-                <input type="radio" name="bg-img" value="01" id="01">
-                <label for="01">
-                    <img src="img/bg/for-preview/01.jpg" alt="かぐや月面DEMデータを用いて作成した3DCG画像">
-                </label>
-
                 <input type="radio" name="bg-img" value="02" id="02">
                 <label for="02">
                     <img src="img/bg/for-preview/02.jpg" alt="美星スペースガードセンターで観測されたホームズ彗星">
+                </label>
+
+                <input type="radio" name="bg-img" value="01" id="01">
+                <label for="01">
+                    <img src="img/bg/for-preview/01.jpg" alt="「かぐや」月面DEMデータを用いて作成した3DCG画像">
+                </label>
+
+                <input type="radio" name="bg-img" value="18" id="18">
+                <label for="18">
+                    <img src="img/bg/for-preview/18.jpg" alt="「ひので」日食">
+                </label>
+
+                <input type="radio" name="bg-img" value="14" id="14">
+                <label for="14">
+                    <img src="img/bg/for-preview/14.jpg" alt="「あかり」が観測したマゼラン星雲の遠赤外線画像">
+                </label>
+
+                <input type="radio" name="bg-img" value="13" id="13">
+                <label for="13">
+                    <img src="img/bg/for-preview/13.jpg" alt="noname">
                 </label>
 
                 <input type="radio" name="bg-img" value="03" id="03">
@@ -65,6 +79,15 @@
                 <!--                <label for="08">-->
                 <!--                    <img src="img/bg/08.png" alt="「あけぼの」衛星が紫外線で見たオーロラサブストーム_ヨリ">-->
                 <!--                </label>-->
+
+                <input type="radio" name="bg-img" value="15" id="15">
+                <label for="15">
+                    <img src="img/bg/for-preview/15.jpg" alt="「ひので」可視光・磁場望遠鏡(SOT)によって撮影されたCall H線(396.9nm)の画像">
+                </label>
+
+                <input type="radio" name="bg-img" value="17" id="17">
+                <label for="17">
+                    <img src="img/bg/for-preview/17.jpg" alt="地球">
 
                 <input type="radio" name="bg-img" value="09" id="09">
                 <label for="09">
@@ -99,24 +122,34 @@
                 <div class="container">
                     <div class="example">
                         <p>生成例<br>クリックで拡大表示</p>
-                        <a href="img/ex/example01.png" data-lightbox="example"
-                           data-title="一年/大/左下/月曜始まり/土曜-なし/日曜-なし/祝日-なし/横組み の場合">
-                            <img src="img/ex/example01.jpg" alt="例１">
+                        <a href="/img/ex/example07.png" data-lightbox="example"
+                           data-title="16:9/一年/大/右下/月曜始まり/土曜-なし/日曜-なし/祝日-なし/横組み の使用例">
+                            <img src="/img/ex/example07.png" alt="例１">
                         </a>
 
-                        <a href="img/ex/example02.png" data-lightbox="example"
-                           data-title="4・5・6月/中/月曜始まり/土曜-青/日曜-赤/祝日-なし/縦組み の場合">
-                            <img src="img/ex/example02.jpg" alt="例２">
+                        <a href="/img/ex/example02.png" data-lightbox="example"
+                           data-title="4・5・6月/中/中央/月曜始まり/土曜-青/日曜-赤/祝日-なし/縦組み の使用例">
+                            <img src="/img/ex/example02.png" alt="例２">
                         </a>
 
-                        <a href="img/ex/example03.png" data-lightbox="example"
-                           data-title="半年/特大/右上/月曜始まり/土曜-なし/日曜-なし/祝日-なし/横組み の場合">
-                            <img src="img/ex/example03.jpg" alt="例３">
+                        <a href="/img/ex/example08.png" data-lightbox="example"
+                           data-title="16:9/1~6月/特大/右下/日曜始まり/土曜-なし/日曜-赤/祝日-赤/縦組み の使用例">
+                            <img src="/img/ex/example08.png" alt="例３">
                         </a>
 
-                        <a href="img/ex/example04.png" data-lightbox="example"
-                           data-title="3・4月/中/中/日曜始まり/土曜-青/日曜-赤/祝日-赤/横組み の場合">
-                            <img src="img/ex/example04.jpg" alt="例４">
+                        <a href="/img/ex/example09.png" data-lightbox="example"
+                           data-title="1・2・3月/大/中央/月曜始まり/土曜-なし/日曜-なし/祝日-なし/横組み の使用例">
+                            <img src="/img/ex/example09.png" alt="例４">
+                        </a>
+
+                        <a href="/img/ex/example06.png" data-lightbox="example"
+                           data-title="16:10/3・4月/中/右下/日曜始まり/土曜-青/日曜-赤/祝日-赤/縦組み の使用例">
+                            <img src="/img/ex/example06.png" alt="例５">
+                        </a>
+
+                        <a href="/img/ex/example10.png" data-lightbox="example"
+                           data-title="16:9/11・12月/極小/左上/日曜始まり/土曜-青/日曜-赤/祝日-赤/横組み の使用例">
+                            <img src="/img/ex/example10.png" alt="例６">
                         </a>
                     </div>
                 </div>
@@ -126,6 +159,13 @@
             <section class="preview-img">
                 <p>プレビューボタンで選択を反映</p>
                 <img src="img/first.jpg">
+                <div class="aspect">
+                    <input type="radio" id="1609" name="aspect" value="1609" checked>
+                    <label for="1609">16:9（Windows）</label>
+
+                    <input type="radio" id="1610" name="aspect" value="1610">
+                    <label for="1610">16:10（Mac）</label>
+                </div>
             </section>
 
             <!--    カレンダー部分の選択肢    -->
@@ -207,14 +247,14 @@
                         <input type="radio" id="0.3" name="大きさ" value="0.3">
                         <label for="0.3">小</label>
 
-                        <input type="radio" id="0.5" name="大きさ" value="0.5">
-                        <label for="0.5">中</label>
+                        <input type="radio" id="0.65" name="大きさ" value="0.65">
+                        <label for="0.65">中</label>
 
                         <input type="radio" id="0.8" name="大きさ" value="0.8" checked>
                         <label for="0.8">大</label>
 
-                        <input type="radio" id="0.9" name="大きさ" value="0.9">
-                        <label for="0.9">特大</label>
+                        <input type="radio" id="0.95" name="大きさ" value="0.95">
+                        <label for="0.95">特大</label>
                     </div>
 
                     <div class="position">
