--- a/index.html
+++ b/index.html
@@ -247,10 +247,10 @@
                         <input type="radio" id="0.3" name="大きさ" value="0.3">
                         <label for="0.3">小</label>
 
-                        <input type="radio" id="0.65" name="大きさ" value="0.65">
+                        <input type="radio" id="0.65" name="大きさ" value="0.65" checked>
                         <label for="0.65">中</label>
 
-                        <input type="radio" id="0.8" name="大きさ" value="0.8" checked>
+                        <input type="radio" id="0.8" name="大きさ" value="0.8">
                         <label for="0.8">大</label>
 
                         <input type="radio" id="0.95" name="大きさ" value="0.95">
@@ -343,7 +343,7 @@
         </div>
     </form>
 </main>
-<footer><p>このツールは<a href="https://darts.isas.jaxa.jp/">DARTS</a>にアーカイブされた公開データを使って、<a href="https://www.vivivit.com/tanakanonoka">田中乃々華</a>さん（武蔵野美術大学）とDARTSメンバーが協力のもとに制作・公開しました。ソースコードは<a href="https://github.com/darts-isas/calendargen">こちら</a>から公開されています。利用は、<a href="https://www.isas.jaxa.jp/researchers/data-policy/">宇宙科学研究所のデータポリシー</a>に従います。<br>問い合わせ先: darts-admin@ML.isas.jaxa.jp</p></footer>
+<footer><p>このツールは<a href="https://darts.isas.jaxa.jp/">DARTS</a>にアーカイブされた公開データを使って、<a href="https://www.vivivit.com/tanakanonoka">田中乃々華</a>さん（武蔵野美術大学）とDARTSメンバーが協力のもとに制作・公開しました。<br>ソースコードは<a href="https://github.com/darts-isas/calendargen">こちら</a>から公開されています。利用は、<a href="https://www.isas.jaxa.jp/researchers/data-policy/">宇宙科学研究所のデータポリシー</a>に従います。<br>問い合わせ先: darts-admin@ML.isas.jaxa.jp</p></footer>
 
 </body>
 </html>
