--- a/index.html
+++ b/index.html
@@ -155,10 +155,11 @@
                 </div>
             </section>
 
-            <!--  合成プレビュー表示  -->
+            <!--  合成プレビュー表示/アスペクト比選択肢  -->
             <section class="preview-img">
                 <p>プレビューボタンで選択を反映</p>
                 <img src="img/first.jpg">
+                
                 <div class="aspect">
                     <input type="radio" id="1609" name="aspect" value="1609" checked>
                     <label for="1609">16:9（Windows）</label>
