--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 <header>
-    <p class="title">カレンダー壁紙作成ツール</p>
+    <p class="title">DARTSカレンダー2023 カスタマイズツール</p>
     <p class="sub-title">あなたのデスクトップに合わせた壁紙をお作りいただけます</p>
 </header>
 
