--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 <input type="radio" name="bg-img" value="17" id="17">
                 <label for="17">
                     <img src="img/bg/for-preview/17.jpg" alt="地球">
+                </label>
 
                 <input type="radio" name="bg-img" value="09" id="09">
                 <label for="09">
