update dounload-btn on html

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
         <!--ダウンロードボタン-->
         <div class="download-btn">
-            <a type="submit" href="<?php echo $file_name;?>" download="<?php echo $file_name;?>" class="download"
+            <a type="submit" href="img/first.jpg" download="img/first.jpg" class="download"
                id="download">ダウンロード</a>
         </div>
     </form>
