update php and html

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                     <img src="img/bg/for-preview/15.jpg" alt="「ひので」可視光・磁場望遠鏡(SOT)によって撮影されたCall H線(396.9nm)の画像">
                 </label>
 
-                <input type="radio" name="bg-img" value="17" id="17">
+                <!-- <input type="radio" name="bg-img" value="17" id="17">
                 <label for="17">
                     <img src="img/bg/for-preview/17.jpg" alt="地球">
-                </label>
+                </label> -->
 
                 <input type="radio" name="bg-img" value="09" id="09">
                 <label for="09">
